--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,43 +10,38 @@
           <div class="row">
             <div class="col-md-4">
               <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5668/angry-developer.jpg"
-                class="rounded float-left img-fluid mb-1 mt-1">
-              <div class="form-check">
-                <div class="text-center">
-                  <input class="form-check-input" type="radio" name="customRadio" id="engineer" value="engineer"
-                    {{#ifEqual options.customRadio 'engineer'}}checked{{/ifEqual}}>
-                  <label class="form-check-label" for="engineer">
-                    工程師
-                  </label>
-                </div>
+                class="rounded float-left img-fluid mb-1 mt-1 border border-info" style="width: 360px; height:250px">
+              <div class="form-check text-center">
+                <input class="form-check-input" type="radio" name="customRadio" id="engineer" value="engineer"
+                  {{#ifEqual options.customRadio 'engineer'}}checked{{/ifEqual}}>
+                <label class="form-check-label" for="engineer">
+                  工程師
+                </label>
+
               </div>
             </div>
 
             <div class="col-md-4">
               <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5667/angry-designer.jpg"
-                class="rounded float-left img-fluid mb-1 mt-1">
-              <div class="form-check">
-                <div class="text-center">
-                  <input class="form-check-input" type="radio" name="customRadio" id="designer" value="designer"
-                    {{#ifEqual options.customRadio 'designer'}}checked{{/ifEqual}}>
-                  <label class="form-check-label" for="designer">
-                    設計師
-                  </label>
-                </div>
+                class="rounded float-left img-fluid mb-1 mt-1 border border-info" style="width: 360px; height:250px">
+              <div class="form-check text-center">
+                <input class="form-check-input" type="radio" name="customRadio" id="designer" value="designer"
+                  {{#ifEqual options.customRadio 'designer'}}checked{{/ifEqual}}>
+                <label class="form-check-label" for="designer">
+                  設計師
+                </label>
               </div>
             </div>
 
             <div class="col-md-4">
               <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5669/angry-founder.jpg"
-                class="rounded img-fluid mb-1 mt-1">
-              <div class="form-check">
-                <div class="text-center">
-                  <input class="form-check-input" type="radio" name="customRadio" id="entrepreneur" value="entrepreneur"
-                    {{#ifEqual options.customRadio 'entrepreneur'}}checked{{/ifEqual}}>
-                  <label class="form-check-label" for="entrepreneur">
-                    創業家
-                  </label>
-                </div>
+                class="rounded float-left img-fluid mb-1 mt-1 border border-info" style="width: 360px; height:250px">
+              <div class="form-check text-center">
+                <input class="form-check-input" type="radio" name="customRadio" id="entrepreneur" value="entrepreneur"
+                  {{#ifEqual options.customRadio 'entrepreneur'}}checked{{/ifEqual}}>
+                <label class="form-check-label" for="entrepreneur">
+                  創業家
+                </label>
               </div>
             </div>
           </div>
