--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container py-5">
 
   <div class="row">
-    <div class="card">
+    <div class="card bg-light">
       <div class="card-body">
         <form method="POST" action="/">
           <h4 class="card-title text-center">你想對誰說幹話？<i class="fas fa-frown-open ml-1"></i></h4>
