--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,10 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-secondary">
 
   <!-- navigation -->
-  <nav class="navbar navbar-dark bg-secondary">
+  <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Rubbish Generator</a>
   </nav>
 
